[gd_scene load_steps=6 format=2]

[ext_resource path="res://Levels/ATest/TestPhysicsConv.gd" type="Script" id=1]
[ext_resource path="res://Objects/Points/V2Point.tscn" type="PackedScene" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[sub_resource type="CircleShape2D" id=2]
radius = 40.0

[sub_resource type="CircleShape2D" id=3]
radius = 56.0

[node name="TestPhysicsConv" type="Node2D"]
script = ExtResource( 1 )

[node name="Conv" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="Conv"]
space_override = 1

[node name="V2PointUL" parent="." instance=ExtResource( 2 )]
position = Vector2( 536, 312 )

[node name="V2Point2DR" parent="." instance=ExtResource( 2 )]
position = Vector2( 1424, 632 )

[node name="BallArea" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="BallArea"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BallArea/Area2D"]
position = Vector2( 1288, 312 )
shape = SubResource( 1 )

[node name="BallRigid" type="Node2D" parent="."]

[node name="RigidBody2D" type="RigidBody2D" parent="BallRigid"]
can_sleep = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="BallRigid/RigidBody2D"]
position = Vector2( 1280, 608 )
shape = SubResource( 2 )

[node name="BallRigid2" type="Node2D" parent="."]

[node name="RigidBody2D" type="RigidBody2D" parent="BallRigid2"]
can_sleep = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="BallRigid2/RigidBody2D"]
position = Vector2( 1040, 520 )
shape = SubResource( 2 )

[node name="BallRigid3" type="Node2D" parent="."]

[node name="RigidBody2D" type="RigidBody2D" parent="BallRigid3"]
can_sleep = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="BallRigid3/RigidBody2D"]
position = Vector2( 728, 384 )
shape = SubResource( 2 )

[node name="BallKinematic" type="Node2D" parent="."]

[node name="KinematicBody2D" type="KinematicBody2D" parent="BallKinematic"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BallKinematic/KinematicBody2D"]
position = Vector2( 1128, 256 )
shape = SubResource( 3 )

[connection signal="input_event" from="Conv/Area2D" to="." method="_on_Area2D_input_event"]
